my-bluegreen-app/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: bluegreen-active
  namespace: default
spec:
  selector:
    app: bluegreen-demo
  ports:
    - port: 80
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: bluegreen-preview
  namespace: default
spec:
  selector:
    app: bluegreen-demo
  ports:
    - port: 80
      targetPort: 8080
