my-bluegreen-app/ingresses.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bluegreen-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: bluegreen.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bluegreen-active
                port:
                  number: 80
    - host: bluegreen-preview.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bluegreen-preview
                port:
                  number: 80
